--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="./styles.css">
 </head>
 <body>
+  <!-- TODO: Probably add explanation? -->
   <canvas id="screen" width="1200" height="900"></canvas>
   <script type="module" src="assets/js/main.js"></script>
 </body>
